--- a/example.html
+++ b/example.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asgar Alert</title>
     <script defer src="/asgar-alert.js"></script>
-    <script defer src="/index.js"></script>
+    <script defer src="/example.js"></script>
   </head>
   <body>
     <button id="logout">Log out</button>
