--- a/example.html
+++ b/example.html
@@ -9,6 +9,11 @@
     <script defer src="/example.js"></script>
   </head>
   <body>
-    <button id="logout">Log out</button>
+    <button id="dialog">Dialog panel</button>
+    <button id="small-dialog">Small dialog panel</button>
+    <button id="alert-success">Success Alert</button>
+    <button id="alert-warning">Warning Alert</button>
+    <button id="alert-info">Info Alert</button>
+    <button id="alert-error">Danger Alert</button>
   </body>
 </html>
